# TITANiAN

./: README.md  inference_csv.py  pyproject.toml
example/inputs/: p_im.csv  pmhc_ba_II.csv  pmhc_ba_II_modified.csv  pmhc_ba_I_modified.csv  pmhc_im.csv  ptcr_ba.csv
example/outputs/: p_im_output.csv  pmhc_ba_II_output.csv  pmhc_ba_I_output.csv  pmhc_im_output.csv  ptcr_ba_output.csv
src/titanian/: aa_index.py  constants.py  inference.py  io_utils_el.py  io_utils_fused.py  io_utils_mlm.py  layers.py  mhc_pseudo_matching.py  model_el.py  model_fused.py  model_mlm.py  utils_el.py  utils_fused.py  utils_mlm.py
